--- a/devApp/src/main/resources/application.yml
+++ b/devApp/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: devApp
   datasource:
-    url: jdbc:mysql://localhost:3306/devblogapp
-    username: springstudent
-    password: springstudent
+    url: jdbc:mysql://localhost:3306/*
+    username: *
+    password: *
   jpa:
     hibernate:
       ddl-auto: update
@@ -13,8 +13,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: 9977subhashchand@gmail.com
-    password: rbywrufscxcifrnt
+    username: *
+    password: *
     properties:
       mail:
         smtp:
